--- a/style.css
+++ b/style.css
@@ -11,18 +11,22 @@ body, html {
 }
 .calcbody{
     width: 30rem;
-    height: 47rem;
-    background-color: black;
+    height: 45rem;
+    background-color: hsl(0, 0%, 15%);
     border-radius: 10px;
 }
 
-.display p{
+.display{
     text-align: right;
-    font-size: 60px;
+    font-size: 35px;
     padding: 35px;
-    margin-bottom: 0px;
     color: white;
+    background-color: hsl(0, 0%, 20%);
+    border: none;
+    border-radius: 10px 10px 0 0;
     font-family: 'Roboto', sans-serif;
+    width: 410px;
+    height: 55px;
 }
 
 .functions{
@@ -30,7 +34,7 @@ body, html {
     justify-content: space-evenly;
     flex-wrap: wrap;
     padding-bottom: 30px;
-    
+    padding-top: 40px;
 
 }
 
